[tool.poetry]
name = "strawberry-flask-prototype"
version = "0.1.0"
description = "Simple prototype for exploring serving a strawberry application using Flask."
authors = ["Brent Klein <bklein@xometry.com>"]

[tool.poetry.dependencies]
python = "^3.8"
strawberry = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
